fix newsfeed spacing

--- a/frontend/src/components/user_show/show.css
+++ b/frontend/src/components/user_show/show.css
@@ -29,7 +29,7 @@
 }
 
 .event {
-    border-radius: 5px;
+    border-radius: 8px;
     width: 90%;
     margin: 10px;
     height: 10%;
